# sleek

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: sleek.json
src/: CMakeLists.txt  extract.cpp  extract.hpp  fdstream.cpp  fdstream.hpp  httpClient.cpp  httpClient.hpp  insert.cpp  insert.hpp  main.cpp
src/codeModel/: codeFile.cpp  codeFile.hpp  cppParser.hpp  cppParser.l  headerFile.cpp  headerFile.hpp  project.cpp  project.hpp  sleekPackage.hpp  systemHeaders.hpp  target.cpp  target.hpp
src/command/: build.cpp  build.hpp  check.cpp  check.hpp  fetch.cpp  fetch.hpp  install.cpp  install.hpp  pack.cpp  pack.hpp  publish.cpp  publish.hpp  test.cpp  test.hpp  uninstall.hpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  Makefile  checkTests.cpp
